--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 openai.api-key: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
 openai.base-url: https://api.openai.com/v1
+openai.model: gpt-3.5-turbo
