--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,9 @@ paypal.cancel.url=http://localhost:8080/payment/cancel
 spring.datasource.url=jdbc:mysql://localhost:3306/paypalstripe
 spring.datasource.username=root
 spring.datasource.password=Shafin*71
+
+
+logging.level.org.springframework.security=TRACE
+spring.security.oauth2.client.registration.google.client-id=  109xxx-xxx.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=  109xxx-xxx.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.redirect-uri=  109xxx-xxx.apps.googleusercontent.com
