--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,13 @@ paypal.cancel.url=http://localhost:8080/payment/cancel
 spring.datasource.url=jdbc:mysql://localhost:3306/paypalstripe
 spring.datasource.username=root
 spring.datasource.password=Shafin*71
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.sql.init.mode=embedded
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 
 logging.level.org.springframework.security=TRACE
-spring.security.oauth2.client.registration.google.client-id=  109xxx-xxx.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=  109xxx-xxx.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.redirect-uri=  109xxx-xxx.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-id=  356495733061-h4enubr5o8olr39968v6oo0ejt8sqn1o.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=  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
+spring.security.oauth2.client.registration.google.redirect-uri=  http://localhost:8080/login/oauth2/code/google
