--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,12 +19,11 @@ paypal.cancel.url=http://localhost:8080/payment/cancel
 
 spring.datasource.url=jdbc:mysql://localhost:3306/paypalstripe
 spring.datasource.username=root
-spring.datasource.password=Shafin*71
+spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.sql.init.mode=embedded
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
 
 logging.level.org.springframework.security=TRACE
 spring.security.oauth2.client.registration.google.client-id=  356495733061-h4enubr5o8olr39968v6oo0ejt8sqn1o.apps.googleusercontent.com
